# FutebolPrevisao

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  pyproject.toml  requirements.txt  setup.sh
airflow/: setup_variables.sh
airflow/dags/: football_daily_pipeline.py
databricks/notebooks/maintenance/: optimize_tables.py
databricks/notebooks/silver/: bronze_to_silver_events.py  bronze_to_silver_fixtures.py  bronze_to_silver_odds.py  bronze_to_silver_standings.py  bronze_to_silver_statistics.py
databricks/schemas/: 01_create_catalog.sql  02_bronze_ddl.sql  03_silver_ddl.sql  04_gold_ddl.sql  init_schemas.py
docs/: IMPL_FOOTBALL_PREDICTION_ENGINE.md  PRD_FOOTBALL_PREDICTION_ENGINE.md  PRD_ORIENTACAO_AGENTE_IA.md
infra/docker/: docker-compose.airflow.yml  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.spark.yml
infra/postgres/: init-serving.sql
src/: __init__.py
src/agents/: __init__.py  base_agent.py  football_ingestion_agent.py  football_processing_agent.py
src/core/: __init__.py  context.py  exceptions.py  result.py  skill_base.py  skill_registry.py
src/skills/: __init__.py
src/skills/dbt/: __init__.py
src/skills/ingestion/: __init__.py  api_football_base.py  api_football_events.py  api_football_fixtures.py  api_football_injuries.py  api_football_leagues.py  api_football_lineups.py  api_football_odds.py  api_football_players.py  api_football_predictions.py  api_football_quota_monitor.py  api_football_standings.py  api_football_statistics.py  api_football_teams.py
src/skills/ml/: __init__.py
tests/: conftest.py
(+22 files in other folders)
